--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 # Site settings
-title: *folio
-email: you@example.com
-description: > # this means to ignore newlines until "baseurl:"
-  A simple, whitespace, helvetica based portfolio theme.
+title: portfolio
 baseurl: /portfolio # the subpath of your site, e.g. /blog/
 url: https://www.webdevholland.com/portfolio/ # the base hostname & protocol for your site
 twitter_username: webdevholland
@@ -13,20 +10,8 @@ markdown: kramdown
 
 highlighter: rouge
 
-# Pagination
-# paginate: 15
-# paginate_path: "/blog/page:num/"
-
-
 collections:
   projects:
     output: true
     permalink: /projects/:path/
- # web-development:
- #   output: true
- #   permalink: /web-development/:path/
- # design:
- #   output: true
- #   permalink: /design/:path/
-
-
+ 
