--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: portfolio
 description: > # this means to ignore newlines until "baseurl:"
   web development and design projects of christine holland.
 baseurl: "/portfolio" # the subpath of your site, e.g. /blog/
-url: https://www.webdevholland.com/portfolio/ # the base hostname & protocol for your site
+url: https://webdevholland.github.io/portfolio/ # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
